# paygent

./: .dockerignore  .env.example  .fuse_hidden00063211000009f9  .gitignore  .vercelignore  CLAUDE.md  COMMAND_INJECTION_PREVENTION_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRACTS.md  CONTRACT_VERIFICATION_GUIDE.md  Dockerfile  HITL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  README.md  SESSION_REPORT_2025-12-24.md  SESSION_REPORT_2025-12-24_DEFI.md  SESSION_REPORT_2025-12-24_HITL.md  SESSION_REPORT_2025-12-25_CACHE.md  SESSION_REPORT_2025-12-25_COMMAND_INJECTION.md  SESSION_REPORT_2025-12-25_COMPLETION.md  SESSION_REPORT_2025-12-25_DOCKER.md  SESSION_REPORT_2025-12-25_FUNCTIONAL_TESTS.md  SESSION_REPORT_2025-12-25_IMPORT_FIXES.md  SESSION_REPORT_2025-12-25_INVALID_RESPONSE.md  SESSION_REPORT_2025-12-25_PERFORMANCE.md  SESSION_REPORT_2025-12-25_QA_SECURITY.md  SESSION_REPORT_2025-12-25_TIMEOUT_HANDLING.md  SESSION_REPORT_2025-12-25_TYPE_IMPROVEMENTS.md  SESSION_SUMMARY.md  VVS_SUBAGENT_IMPLEMENTATION.md  alembic.ini  app_spec.txt  check_style_tests.py  claude-codebase-digest.json  claude-progress.txt  demo_agent.py  docker-compose.yml  feature_list.json  init.sh  (+45 more)
alembic/: env.py
alembic/versions/: 001_initial.py
api/: index.py
app/: README.md
app/steps/: x402-payment.ts
app/workflows/: agent-payment-workflow.ts  index.ts  subscription-renewal-workflow.ts
contracts/: AgentWallet.sol  MockToken.sol  PaymentRouter.sol  ServiceRegistry.sol  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml
contracts/adapters/: DelphiAdapter.sol  MoonlanderAdapter.sol  VVSAdapter.sol
contracts/contracts/: AgentWallet.sol  MockDelphi.sol  MockMoonlander.sol  MockToken.sol  PaymentRouter.sol  ServiceRegistry.sol
contracts/deployments/: adapters-testnet.json  (+2 more)
demo-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: COMPLETION_SUMMARY.md  CONTRACT_DEPLOYMENT.md  DEMO_TTS_SCRIPT.md  DEMO_VIDEO_PLAN.md  DEVELOPMENT.md  DOCKER_SETUP.md  MCP_IMPLEMENTATION_SUMMARY.md  Paygent_Architecture.md  Paygent_PRD.md  Testnet_Testing_Results.md  VERCEL_DEPLOYMENT.md  VVS_SUBAGENT_IMPLEMENTATION.md  vvs_testnest_deploy.md  websocket_implementation.md
reports/: SESSION_REPORT_2025-12-25_VALIDATION.md  SESSION_STATUS_2025-12-25.md  session-2025-12-24.md  session-summary-2025-12-24.md  session_summary_2025-12-24.md
scripts/: demo_agent.py  deploy_contracts.py  deployment_config.json  mock_x402_service.py  run_server.py  test_delphi.py  test_mcp_discovery.py  test_moonlander.py  test_planning_subagents.py  test_x402_flow.py  test_x402_integration.py  test_x402_payment.py  test_x402_payment_local.py  test_x402_simple.py  update_completed_features.py  update_service_features.py  update_wallet_payment_features.py  validate_implementation.py  verify_existing.py  vvs_implementation_summary.py
src/: __init__.py  main.py  main_simple.py
tests/: __init__.py  conftest.py  qa_verification.py  test_agent_execution_performance.py  test_agent_fallback.py  test_agent_tools.py  test_approval_workflow.py  test_async_operations.py  test_audit_trail.py  test_blockchain_balance.py  test_cache_operations.py  test_cache_performance.py  test_cache_standalone.py  test_command_injection_prevention.py  test_command_parser.py  test_complex_workflow_performance.py  test_comprehensive_endpoints.py  test_concurrent_requests.py  test_crypto_com_sdk.py  test_deepagents_framework.py  test_deepagents_initialization.py  test_deepagents_integration.py  test_defi_connectors.py  test_docker_setup.py  test_error_response_security.py  test_https_enforcement.py  test_invalid_response_handling.py  test_llm_fallback.py  test_mcp_adapter.py  test_mcp_integration.py  test_multi_step_workflow.py  test_multisig_approval.py  test_performance.py  test_planner.py  test_pydantic_validation.py  test_qa_command_injection.py  test_qa_error_alerting.py  test_qa_verification.py  test_redis_async.py  test_security.py  (+14 more)
(+191 files in other folders)
